# CuSpCluster

./: CMakeLists.txt  LICENSE  README.md  benchmark.cu  main.cu  serialtest.cu  serialtest2.cu  serialtest2.h  test.cu  utils.h
data/: csr_col.txt  csr_ptr.txt  csr_values.txt  tcsr_col.txt  tcsr_ptr.txt  tcsr_results.txt  tcsr_values.txt  未命名.ipynb
data/.ipynb_checkpoints/: 未命名-checkpoint.ipynb
src/: kernels.h  spKmeans.cu  spKmeans.h  utils.h
